--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.4.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-regular-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hero-icon": "0.0.7",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
