--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-hero-icon": "0.0.7",
     "react-icons": "^4.3.1",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "framer-motion": "^4.1.17"
   },
   "scripts": {
     "start": "craco start",
