--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hero-icon": "0.0.7",
     "react-icons": "^4.3.1",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2",
-    "framer-motion": "^4.1.17"
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1",
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "craco start",
