--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^17.0.2",
     "react-hero-icon": "0.0.7",
     "react-icons": "^4.3.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
