--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "react-dom": "^17.0.2",
     "react-hero-icon": "0.0.7",
     "react-icons": "^4.3.1",
+    "react-intersection-observer": "^8.32.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.4",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^1.1.2"
